--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<script>
+	if(global === undefined) {
+		var global = window;
+	}
+</script>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
