--- a/src/app.html
+++ b/src/app.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <script>
-	if(global === undefined) {
-		var global = window;
-	}
+    if (global === undefined) {
+        var global = window;
+    }
 </script>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<head>
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-MXNLJHXM');</script>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="%sveltekit.assets%/favicon.ico"/>
+    <meta name="viewport" content="width=device-width"/>
+    %sveltekit.head%
+</head>
+<body data-sveltekit-preload-data="hover">
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MXNLJHXM"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<div style="display: contents">%sveltekit.body%</div>
+</body>
 </html>
