--- a/src/app.html
+++ b/src/app.html
@@ -18,7 +18,19 @@
         j.src =
             'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
         f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-MXNLJHXM');</script>
+    })(window, document, 'script', 'dataLayer', 'GTM-MXNLJHXM');
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            window.dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'GTM-MXNLJHXM');
+    </script>
     <meta charset="utf-8"/>
     <link rel="icon" href="%sveltekit.assets%/favicon.ico"/>
     <meta name="viewport" content="width=device-width"/>
