--- a/src/app.html
+++ b/src/app.html
@@ -34,6 +34,21 @@
     <meta charset="utf-8"/>
     <link rel="icon" href="%sveltekit.assets%/favicon.ico"/>
     <meta name="viewport" content="width=device-width"/>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.pazzwordz.io/" />
+    <meta property="og:title" content="Pazzwordz.io | Free Open-Source Password Manager" />
+    <meta property="og:description" content="Generate and manage your passwords securely with Pazzwordz.io. Create strong, unique passwords for your online accounts." />
+    <meta property="og:image" content="https://www.pazzwordz.io/pazzwordz.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.pazzwordz.io/" />
+    <meta property="twitter:title" content="Pazzwordz.io | Free Open-Source Password Manager" />
+    <meta property="twitter:description" content="Generate and manage your passwords securely with Pazzwordz.io. Create strong, unique passwords for your online accounts." />
+    <meta property="twitter:image" content="https://www.pazzwordz.io/pazzwordz.png" />
+
     %sveltekit.head%
 </head>
 <body data-sveltekit-preload-data="hover">
